manifests/plain/mta/namespaces.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: openshift-mta
  annotations:
    argocd.argoproj.io/sync-wave: "0"
